--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="./displaxflex.css">
     <!--comportamiento de botones-->
     <link rel="stylesheet" href="./button.css">
+    <!--JavaScrip-->
+    <script src="./main.js" defer></script>
 </head>
 <body>
     <nav class="nav">
@@ -65,13 +67,13 @@
             <h1 class="contener__text-titulo">
                 Make remote work
             </h1>
-            <p class="contener__text-parafo">
+            <p class="contener__text-parafo" id="contener__text-parafo--dinamico">
                 Get your team in sync, no matter your location.
                 Streamline processes, create team rituals, and 
                 watch productivity soar.
             </p>
-            <a href="#" class="contener__button">
-                <p class="contener__text-button" >
+            <a href="#" class="contener__button" id="contener__button-onclik">
+                <p class="contener__text-button" id="contener__text-button--dinamico">
                     Learn more
                 </p>
             </a>
