--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
                 Streamline processes, create team rituals, and 
                 watch productivity soar.
             </p>
-            <a href="#" class="contener__button" id="contener__button-onclik">
+            <p class="contener__button" id="contener__button-onclik">
                 <p class="contener__text-button" id="contener__text-button--dinamico">
                     Learn more
                 </p>
-            </a>
+            </p>
             <div class="contener__img-pie">
                 <img src="./img/client-databiz.svg" alt="no_imgen" width="111" height="21" class="contener__img-databiz">
                 <img src="./img/client-audiophile.svg" alt="no_imgen" width="73" height="36"  class="contener__img-audiophile">
