--- a/index.html
+++ b/index.html
@@ -53,7 +53,19 @@
             <p class="nav__About"> <a href="#" class="nav__About">About</a></p>
         </div>
         <div class="nav__box-login">
-            <a href="#" class="nav__Text-login">Login</a>
+            <button id="button__Login">login</button>
+            <div id="card">
+                <p id="card__user-txt">
+                    usuario = Funval
+                </p>
+                <input type="Text" name="user" value="as" id="card__user">
+                <p id="card__pass-txt">
+                    pass = Funval
+                </p>
+                <input type="password" name="user" value=""  id="card__pass">
+                <button id="button__submint">
+                    Enviar
+            </div>
             <a href="#" class="nav__Botton-Register">
                 <p class="nav__Botton-Register-Text">
                     Register
@@ -72,11 +84,11 @@
                 Streamline processes, create team rituals, and 
                 watch productivity soar.
             </p>
-            <p class="contener__button" id="contener__button-onclik">
+            <div class="contener__button" id="contener__button-onclik">
                 <p class="contener__text-button" id="contener__text-button--dinamico">
                     Learn more
                 </p>
-            </p>
+            </div>
             <div class="contener__img-pie">
                 <img src="./img/client-databiz.svg" alt="no_imgen" width="111" height="21" class="contener__img-databiz">
                 <img src="./img/client-audiophile.svg" alt="no_imgen" width="73" height="36"  class="contener__img-audiophile">
