--- a/index.html
+++ b/index.html
@@ -56,21 +56,25 @@
             <button id="button__Login">login</button>
             <div id="card">
                 <p id="card__user-txt">
-                    usuario = Funval
+                    usuario
                 </p>
-                <input type="Text" name="user" value="as" id="card__user">
+                <input type="Text" name="user" value="" id="card__user">
                 <p id="card__pass-txt">
-                    pass = Funval
+                    pass 
                 </p>
                 <input type="password" name="user" value=""  id="card__pass">
                 <button id="button__submint">
-                    Enviar
+                    Submint
+                </button>
+                <button id="button__cancel">
+                    Cancel
+                </button>
             </div>
-            <a href="#" class="nav__Botton-Register">
+            <button  id="nav__Botton-Register">
                 <p class="nav__Botton-Register-Text">
                     Register
                 </p>
-            </a>
+            </button>
         </div>
     </nav>
     <!--box para texto e imagen-->
